fix spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -95,6 +95,8 @@
   .header {
     font-size: 1.5rem;
     text-align: center;
+    margin: 20px;
+    padding: 10px;
   }
 
   .list {
@@ -229,6 +231,7 @@
     position: relative;
     bottom: 0;
     padding: 10px;
+    margin: 20px;
   }
 
   .banner .subBanner {
